# InsidiousLight

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
components/cmd_system/: CMakeLists.txt  Systems.cpp  WifiCommands.cpp  cmd_system.cpp  cmd_system.h
main/: CMakeLists.txt  DnsServer.cpp  FileCommands.hpp  Settings.cpp  Settings.hpp  Veselá Básnička.cpp  WebServer.cpp  WebServer.hpp  WiFi Functions.cpp  WifiCommands.cpp  main.c  main.cpp
main/embed/: upload_script.html
